# dogs_drf

./: .env.sample  .gitignore  data_dogs.json  data_users.json  dump.rdb  env_sample  pyproject.toml
dogs/: models.py  permissions.py  tasks.py  tests.py  urls.py  validators.py
dogs/migrations/: 0001_initial.py  0002_dog_is_public_dog_owner.py  0003_dog_price.py  0004_alter_dog_price.py  0005_dog_likes.py
dogs/serializers/: breed.py  dog.py
dogs/views/: breed.py  dog.py
dogs_drf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: models.py
users/migrations/: 0001_initial.py  0002_user_role.py
